test/ui/test/packages/faulty-component-paths/three/package.stderr
error: could not load the executable component ‘main’ in package ‘test’
  ┌─ ${TEST_FOLDER}/packages/faulty-component-paths/three/leading/astray
  │
  ├─ ${TEST_FOLDER}/packages/faulty-component-paths/three/package.metadata:8:16
  │
8 │         path: "leading/astray",
  │                ══════════════
  │
 note: No such file or directory (os error 2)

error: aborting due to previous error

