test/ui/test/packages/faulty-component-paths/three/package.recnot

name: test,
version: "0.0.0",

components: {
    main: {
        type: executable,
        path: "leading/astray",
    },
},
